fix: overflow while active popup, max-height overflow for absolute description,

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -35,6 +35,10 @@ body {
 * {
     scroll-behavior: smooth;
     user-select: none;
+
+    &:has(.image-preview-modal) {
+        overflow: hidden;
+    }
 }
 img {
     max-width: 100%;
@@ -445,7 +449,7 @@ ul {
 }
 .absolute-description {
     opacity: .75;
-    padding: 40px 25px 15px;
+    padding: 45px 25px 15px;
     background: linear-gradient(180deg, transparent 0, rgba(0, 0, 0, 0.00345888) 0, rgba(0, 0, 0) 150%);
     color: #fff;
     position: absolute;
@@ -462,7 +466,7 @@ ul {
 
     &.expanded {
         overflow: auto;
-        max-height: 700px;
+        max-height: min(100%, 700px);
         opacity: 1;
         background: rgba(0,0,0,.55);
 
@@ -477,13 +481,13 @@ ul {
         text-align: center;
         cursor: pointer;
         position: absolute;
-        top: 0;
+        top: 5px;
         left: 50%;
         transform: translateX(-50%);
         padding-top: 5px;
         padding-bottom: 100px;
         margin: 0;
-        font-size: 50px;
+        font-size: 45px;
         color: #fff;
     }
 }
@@ -1155,7 +1159,7 @@ select,
     }
 
     .absolute-description.expanded {
-        max-height: 600px;
+        max-height: min(100%, 600px);
     }
 }
 
@@ -1202,7 +1206,7 @@ select,
         font-size: 20px;
     }
     .absolute-description.expanded {
-        max-height: 500px;
+        max-height: min(100%, 500px);
     }
 }
 
@@ -1223,7 +1227,7 @@ select,
         min-height: 400px;
     }
     .absolute-description.expanded {
-        max-height: 400px;
+        max-height: min(100%, 400px);
     }
 }
 
